--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <body>
 	<h1>Hi there...</h1>
 		<p>Our paragraph...</p>
+		<p>second paragraph</p>
+		<p>third  paragraph</p>
+		<p>fourth paragraph</p>
 </body>
 </html>
