--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 		<p>second paragraph</p>
 		<p>third  paragraph</p>
 		<p>fourth paragraph</p>
+		<p>fifth paragraph</p>
+		<p>sisth paragraph</p>
+		<p>seventh paragraph</p>
 </body>
 </html>
