first commit from Mint

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 		<p>fifth paragraph</p>
 		<p>sisth paragraph</p>
 		<p>seventh paragraph</p>
+	<h1>We are adding a new input from linux Mint</h1>
 </body>
 </html>
