second commit with different userName

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 		<p>sisth paragraph</p>
 		<p>seventh paragraph</p>
 	<h1>We are adding a new input from linux Mint</h1>
+	<p>second commit from Mint</p>
 </body>
 </html>
